@@ -132,7 +132,6 @@ static boolean_t _getDiskActivity(char *mountpoint, Info_T inf) {
                 CFRelease(url);
                 CFRelease(session);
         }
-        inf->priv.filesystem.hasIOStatistics = rv;
         return rv;
 }
 
